syntax = "proto3";

package com.road.yishi.proto.treasuremap;

message PlayerTreasureMsg {
  int32 userId = 1;
  int32 joinCount = 2;
  int32 rewardCount = 3;
  int32 index = 4;
  repeated int32 templateIds = 5;
  int32 opType = 6;
  int32 payType = 7;
  bool refreshType = 8;
  bool isReward = 9;
  bool isFirstQuest = 10;
  bool isFirstGet = 11;
  bool isFirstUse = 12;
}
